Change history


Master
------
- ILF-33: Add timeout to requests to iCloud server
- ILF-30: Timeout will exceed "Low Updates" endtime
- ILF-29: Warning is not logged with new set timeout
- ILF-27: Improve handling of PyiCloudAPIResponseError and reduce sleep interval

Version 0.7.0, 2017-11-12
-------------------------
- ILF-25: Improve communication with server to update
- ILF-19: Use less frequent update interval when home at night 
- ILF-21: iCloudLocationFetcher hangs resetting connections after a while
- ILF-20: Use cookie_directory to store the cookie in non-volotile memory
- ILF-15: Improve home detection when old locations are received
- ILF-14: Extend the directories to search for the conf file to include the iCloudLocationFetcher directory
- ILF-13: Running via init.d script requires shebang


Version 0.6.0, 2017-11-06
-------------------------
- ILF-10: Update interval reverts to long default interval when close to home
- ILF-8: Use adjustable sleep time based on devices next update request time
- ILF-7: Improve retry mechanism for outdated location fetching
- ILF-4: Use distance based update interval
- ILF-3: Store sensitive apple data in separate file


Version 0.5.0, 2017-11-03
-------------------------
- Change log line to correctly identify program as Locations2Domoticz
- For testing purposes make communicating with Domoticz optional
- Switch to requests package for Domoticz communication
- More robust error handling when communication with Domoticz
- Renamed project to iCloudLocationFetcher
- ILF-1: Make script Domoticz unaware but allow any URL to be called