@@ -3,6 +3,8 @@ Change history
 
 Master
 ------
+- ILF-36: In case of communication errors the retry should happen faster
+- ILF-35: Always recreate connection after long sleep interval
 - ILF-33: Add timeout to requests to iCloud server
 - ILF-30: Timeout will exceed "Low Updates" endtime
 - ILF-29: Warning is not logged with new set timeout
